Added https/ssl configuration

--- a/SRC/Web.Application/Web.Application/appsettings.json
+++ b/SRC/Web.Application/Web.Application/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbContext": "host=db;port=5555;database=school_db;userid=postgres;password=postgres"
+    "DbContext": "host=localhost;port=5432;database=school_db;userid=postgres;password=postgres"
   }
 }
