--- a/Docker/HTTPS/docker-compose.yml
+++ b/Docker/HTTPS/docker-compose.yml
@@ -4,6 +4,14 @@
 # or
 #$ docker-compose up -d (no logs)
 
+# SSL setup
+# https://learn.microsoft.com/en-us/aspnet/core/security/docker-compose-https?view=aspnetcore-7.0
+
+# 1. Create SSL Certificate
+# .NET CLI
+#   dotnet dev-certs https -ep %USERPROFILE%\.aspnet\https\aspnetapp.pfx -p password
+#   dotnet dev-certs https --trust
+
 version: '3.8'
 
 networks:
@@ -13,13 +21,23 @@ networks:
 services:
   web:
     container_name: web
-    build: ../SRC/Web.Application/Web.Application
+    build: ../../SRC/Web.Application/Web.Application
+      
     depends_on:
       - db
     ports:
       - '80:80'
+      - '4001:443'
     environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=https://+:443;http://+:80
+      - ASPNETCORE_HTTPS_PORT=4001
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=password
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
       - ConnectionString=host=db;port=5432;database=school_db;username=postgres;password=postgres;pooling=true;
+    
+    volumes:
+      - ~/.aspnet/https:/https:ro
     networks:
        - dev
      
